--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Teghwin Kohli
-description: Hi There! This is a quick summary of some my key Data Science and Analytics projects.
+description: "Welcome to my data analytics portfolio! My name is Teghwin and I am a data analyst. Here, you'll find a collection of projects showcasing my skills in data analysis, visualization, and modeling. Each project includes a brief description, data and methods used, and insights obtained. Feel free to get in touch if you have any questions for me!"
