--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 remote_theme: pages-themes/minimal@v0.2.0
-plugins: - jekyll-remote-theme # add this line to the plugins list if you already have one
+plugins: 
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Teghwin Kohli
 description: "Welcome to my data analytics portfolio! Here, you'll find a collection of projects showcasing my skills in data analysis, visualization, and modeling. Each project includes a brief description, data and methods used, and insights obtained. Feel free to click on each project to learn more or get in touch if you have any questions!"
